# beach

./: .env.local  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROTOCOL_IMPLEMENTATION.md  chrome-devtools-mcp-config.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  rustc-ice-2025-09-11T19_33_29-43697.txt  rustc-ice-2025-09-11T19_34_00-43883.txt  rustc-ice-2025-09-11T19_35_37-44834.txt  test-chrome-mcp.js  test-scrollback.sh
apps/beach/: Cargo.toml  build.rs  plan.md
apps/beach-cabana/: CONVENTIONS.md  Cargo.toml  README.md  build.rs
apps/beach-cabana/cli/: Cargo.toml
apps/beach-cabana/cli/src/: cli.rs  main.rs  tui_pick.rs
apps/beach-cabana/crates/cabana-macos-picker/: Cargo.toml  build.rs
apps/beach-cabana/host/: Cargo.toml
apps/beach-cabana/host/src/: desktop.rs  lib.rs  mp4.rs  noise.rs  security.rs  webrtc.rs
apps/beach-cabana/native-apps/desktop/: Cargo.toml
apps/beach-cabana/src/: cli.rs  main.rs  noise.rs  security.rs  webrtc.rs
apps/beach-cabana/src/capture/: frame.rs  mod.rs
apps/beach-cabana/src/encoder/: mod.rs  videotoolbox.rs
apps/beach-cabana/src/fixture/: client.rs  server.rs
apps/beach-cabana/src/platform/: macos.rs  mod.rs
apps/beach-human/: Cargo.toml  plan.md
apps/beach-human/examples/: dump_updates.rs
apps/beach-human/src/: lib.rs  main.rs
apps/beach-human/src/cache/: cache.rs  grid.rs  mod.rs
apps/beach-human/src/client/: grid_renderer.rs  terminal.rs
apps/beach-human/src/protocol/: mod.rs  wire.rs
apps/beach-human/src/server/: server.rs
apps/beach-human/src/session/: mod.rs
apps/beach-human/src/sync/: mod.rs
apps/beach-human/src/synchronizer/: synchronizer.rs
apps/beach-human/src/telemetry/: mod.rs
apps/beach-human/src/transport/: mod.rs
apps/beach-human/tests/: client_transcripts.rs  perf_harness.rs  session_roundtrip.rs  transport_sync.rs  webrtc_transport.rs
apps/beach-lifeguard/client/: Cargo.toml
apps/beach-lifeguard/client/src/: lib.rs
apps/beach-lifeguard/core/: Cargo.toml
apps/beach-lifeguard/core/src/: lib.rs  token.rs
apps/beach-manager/: Cargo.toml  README.md  build.rs
apps/beach-manager-rewrite/: Cargo.toml
apps/beach-manager-rewrite/migrations/: 0001_init.sql  0002_persistence.sql
apps/beach-manager-rewrite/src/: assignment.rs  assignment_orm.rs  assignment_postgres.rs  assignment_redis.rs  bus_ingest.rs  bus_publisher.rs  config.rs  lib.rs  main.rs  metrics.rs  persistence.rs  pipeline.rs  queue.rs  queue_redis.rs  routes.rs  state.rs  telemetry.rs  transport_shim.rs
apps/beach-manager-rewrite/src/bus/: mod.rs
apps/beach-manager-rewrite/src/routes/: cache.rs
apps/beach-manager-rewrite/tests/: assignment_integration.rs  attach_integration.rs  bus_topics.rs  bus_unified_ipc.rs  persistence_pg.rs  rtc_bus.rs
apps/beach-manager-rewrite/tests/smoke/: docker-compose.failover.yml  docker-compose.smoke.yml  run-failover-smoke.sh  run-smoke.sh
apps/beach-manager/migrations/: 20250101000000_initial_schema.sql  20250102000000_controller_leases_runtime.sql  20250104000000_rls_membership_select.sql  20250104000000_session_attach_method.sql  20250105000000_session_viewer_passcode.sql  20250106000000_controller_pairing_schema.sql  20250107000000_canvas_layout_schema.sql  20250219120000_controller_leases_runtime.sql  20250305000000_initial_schema.sql  20250415000001_shared_controller_leases.sql  20251016230211_initial_schema.sql  20251017200500_rls_policies.sql
apps/beach-manager/src/: auth.rs  config.rs  fastpath.rs  lib.rs  log_throttle.rs  main.rs  metrics.rs  publish_token.rs  state.rs
apps/beach-manager/src/routes/: auth.rs  fastpath.rs  mcp.rs  mod.rs  private_beaches.rs  sessions.rs  sse.rs
apps/beach-manager/tests/: postgres_integration.rs  rls.rs
apps/beach-rescue/client/: Cargo.toml
apps/beach-rescue/client/src/: lib.rs
apps/beach-rescue/server/: Cargo.toml
apps/beach-rescue/server/src/: main.rs  session.rs  telemetry.rs
apps/beach-road/: Cargo.toml
apps/beach-road/src/: cli.rs  config.rs  entitlement.rs  handlers.rs  main.rs  session.rs  signaling.rs  storage.rs  viewer_token.rs  websocket 2.rs  websocket.rs
apps/beach/examples/: dump_updates.rs
apps/beach/src/: README.md  config.rs  debug_log.rs  debug_recorder.rs  lib.rs  main.rs  metrics.rs
apps/beach/src/auth/: config.rs  credentials.rs  crypto.rs  error.rs  gate.rs  mod.rs  passphrase.rs
apps/beach/src/cache/: grid.rs  mod.rs
apps/beach/src/client/: grid_renderer.rs  mod.rs  predictive_echo.rs  subscription_client.rs  terminal.rs  terminal_client 2.rs  terminal_client.rs
apps/beach/src/debug/: ipc.rs  mod.rs  server.rs
apps/beach/src/mcp/: auth.rs  bridge.rs  client.rs  client_proxy.rs  mod.rs  protocol.rs  registry.rs  server.rs
apps/beach/src/protocol/: client_messages.rs  control_messages.rs  messages.rs  mod.rs  protocol_spec.txt  server_messages.rs  wire.rs
apps/beach/src/server/: debug_handler.rs  io.rs  io_resize.rs  mod.rs  pty.rs  pty_writer_impl.rs  server.rs  terminal.rs
apps/beach/src/session/: client.rs  handlers.rs  message_router.rs  mod 3.rs  mod.rs  multiplexer.rs  signaling.rs  signaling_transport.rs  subscription_handler.rs  subscription_pool.rs  view_registry.rs  websocket.rs
apps/beach/src/subscription/: data_source.rs  hub 2.rs  hub.rs  manager.rs  mod.rs
apps/beach/src/telemetry/: mod.rs
apps/beach/src/terminal/: action.rs  app.rs  auth.rs  cli.rs  config.rs  error.rs  mod.rs  negotiation.rs
apps/beach/src/tests/: background_color_test.rs  mod.rs  protocol_test.rs
apps/beach/tests/: client_transcripts.rs  perf_harness.rs  session_roundtrip.rs  transport_sync.rs  webrtc_transport.rs
crates/beach-buggy/: Cargo.toml  README.md
crates/beach-buggy/src/: fast_path.rs  lib.rs  publisher.rs  subscriber.rs
crates/manager-sdk/: Cargo.toml  README.md
crates/manager-sdk/src/: assignment.rs  assignment_store.rs  lib.rs
crates/transport-unified-adapter/: Cargo.toml
crates/transport-unified-adapter/src/: lib.rs  webrtc_attach.rs
crates/transport-webrtc/: Cargo.toml
crates/transport-webrtc/src/: lib.rs
(+1564 files in other folders)
