[workspace]
members = [
  "apps/beach",
  "apps/beach-road",
  "apps/beach-rescue/core",
  "apps/beach-rescue/server",
  "apps/beach-rescue/client",
  "apps/beach-manager",
  "crates/beach-buggy",
  "crates/harness-proto",
  "crates/manager-sdk",
  "crates/test-timeout",
]
exclude = [
  "apps/beach-cabana",
]
resolver = "2"
