cargo-features = ["edition2024"]

[workspace]
members = [
  "apps/beach",
  "apps/beach-road",
  "apps/beach-lifeguard/core",
  "apps/beach-lifeguard/server",
  "apps/beach-lifeguard/client",
  "apps/beach-manager",
  "crates/beach-buggy",
  "crates/harness-proto",
  "crates/manager-sdk",
  "crates/test-timeout",
]
exclude = [
  "apps/beach-cabana",
]
resolver = "2"
