[package]
name = "beach-manager"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.13"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
