[package]
name = "beach-manager"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.13"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
beach-buggy = { path = "../../crates/beach-buggy" }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
