[package]
name = "beach-road"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
futures-util = "0.3"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tokio-tungstenite = "0.26"
rand = "0.8"
time = { version = "0.3", features = ["serde"] }
beach-rescue-core = { path = "../beach-rescue/core" }

[dev-dependencies]
test-timeout = { path = "../../crates/test-timeout" }
