[package]
name = "beach"
version = "0.1.0"
edition = "2024"
authors = ["Arel Lidow <arel@beach.sh>"]

[lib]
name = "beach"
path = "src/lib.rs"

[[bin]]
name = "beach"
path = "src/main.rs"

# [[bin]]
# name = "test-subscription"
# path = "src/test_subscription_client.rs"


[dependencies]
alacritty_terminal = { version = "0.21", optional = true }
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
crossterm = "0.28"
futures = "0.3"
futures-util = "0.3"
num-bigint = { version = "0.4", features = ["serde"] }
portable-pty = "0.8.1"
rand = "0.8"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "io-util", "io-std", "sync", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
unicode-width = "0.1"
url = "2.5.7"
uuid = { version = "1", features = ["v4"] }
webrtc = "0.14"

[dev-dependencies]
test-timeout = { path = "../../crates/test-timeout" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
nix = { version = "0.27", features = ["ioctl", "signal", "poll"] }
libc = "0.2"

[features]
default = ["alacritty-backend"]
alacritty-backend = ["alacritty_terminal"]
