[package]
name = "transport-unified-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
transport-bus = { path = "../transport-bus" }
bytes = "1"
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
parking_lot = "0.12"
webrtc = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
tracing = { version = "0.1", optional = true }

[features]
webrtc-adapter = ["webrtc", "serde", "serde_json", "reqwest", "tracing"]
