[package]
name = "transport-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
url = "2"
webrtc = "0.10"
transport-bus = { path = "../transport-bus" }
transport-unified-adapter = { path = "../transport-unified-adapter" }
beach_client_core = { package = "beach", path = "../../apps/beach" }
parking_lot = "0.12"
