[package]
name = "beach-lifeguard-core"
version = "0.1.0"
edition = "2021"
description = "Shared primitives for the Beach WebSocket fallback service."
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
