[package]
name = "beach-rescue-server"
version = "0.1.0"
edition = "2021"
description = "Server binary for the Beach WebSocket fallback transport."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "json"] }
base64 = "0.22"
beach-rescue-core = { path = "../core" }
beach-rescue-client = { path = "../client" }
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
time = "0.3"
thiserror = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
tracing-opentelemetry = "0.32"
dashmap = "5"
slab = "0.4"
parking_lot = "0.12"
