[package]
name = "beach-cabana-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
beach-cabana-host = { path = "../../host" }
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
open = "5"
