[package]
name = "beach-cabana-desktop"
version = "0.1.0"
edition = "2024"

[features]
default = ["picker-native"]
picker-mock = ["dep:cabana-macos-picker", "cabana-macos-picker/mock"]
picker-native = [
    "dep:cabana-macos-picker",
    "cabana-macos-picker/native"
]

[dependencies]
anyhow = "1"
beach-cabana-host = { path = "../../host", features = ["webrtc"] }
cabana-macos-picker = { path = "../../crates/cabana-macos-picker", optional = true, default-features = false }
crossbeam-channel = "0.5"
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui_extras = { version = "0.27", features = ["image"] }
futures-util = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
open = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
serde_json = "1"
base64 = "0.22"
beach_client_core = { path = "../../../beach", package = "beach" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
